# mcp_tool_run

./: README.md  cookiecutter.json
scalapay-cookiecutter-python-lambda-function/: CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  mcp.json  pyproject.toml  requirements.txt  server.py
scalapay-cookiecutter-python-lambda-function/.buildkite/: pipeline.yml
scalapay-cookiecutter-python-lambda-function/.buildkite/hooks/: pre-command
scalapay-{{cookiecutter.repo_slug}}/: .flake8  CONTRIBUTING.md  pyproject.toml
scalapay-{{cookiecutter.repo_slug}}/tests/: test_example.py
{{cookiecutter.repo_slug}}/: Dockerfile  Makefile  README.md  pyproject.toml  {{ cookiecutter.module_name }}.py
{{cookiecutter.repo_slug}}/.buildkite/: pipeline.yml
